--- a/hw3/TodoApi/appsettings.json
+++ b/hw3/TodoApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings":{
-    "ToDoDB": "server=localhost;user=root;password=aA1795aA;database=tododb" 
+    "ToDoDB": "server=bdtrnjrcs4cymqzbvvve-mysql.services.clever-cloud.com;user=u2fozkhxgyznsxeq;password=gUV4HevRvDcwlZv37u3H;database=bdtrnjrcs4cymqzbvvve" 
+    
   },
  "applicationUrl": "http://localhost:5170"
 }
